# Atom

./: .gitignore  2CFF.cif  2DHB.cif  3TAN.cif  9PHB.cif  9RE1.cif  Alanine.sdf  Aspirin.sdf  Caffeine.sdf  Cargo.toml  Glucose.sdf  PRD_900003.cif  README.md  Sucrose.sdf  benzene.sdf  check_pt_type.py  colab_export.py  converter_simple.py  converter_v2.py  converter_v3.py  debug_export.py  extract_params.py  fasta_to_xyz.py  fix_surface.py  galactose.sdf  generate_onnx_direct.py  inspect_mace_model.py  inspect_model.py  mc_tables.h  paulbourke.html  physics_model.onnx  pt_to_onnx.py  rcsb_pdb_9RE1.fasta  rcsb_pdb_9RE1.fasta.xyz  repulsion_params.txt  setup_ort.sh  table_snippet.txt  test_onnx_export.py
crates/atom_ai/: Cargo.toml
crates/atom_core/: Cargo.toml
crates/atom_core/examples/: debug_sdf.rs  load_pdb.rs  test_ani.rs
crates/atom_core/src/: dcd.rs  lib.rs  potential.rs  surface.rs
crates/atom_physics/: Cargo.toml
crates/atom_physics/examples/: ani_sim.rs  headless_sim.rs  test_ani_ensemble.rs  test_ani_protein.rs  test_mace.rs  test_stability.rs
crates/atom_physics/src/: ani.rs  hybrid.rs  lib.rs  mace.rs  neural.rs
crates/atom_viz/: Cargo.toml
crates/atom_viz/examples/: ani_viz.rs  download_helper.py  mace_viz.rs  simple_window.rs  view_ani.rs  view_any.rs  view_hybrid.rs
crates/atom_viz/src/: camera.rs  lib.rs  line.wgsl  mesh.rs  shader.wgsl  shader_surface.wgsl  spline.rs  ui.rs
